--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,10 @@ on:
 permissions:
   contents: write
 
+env:
+  GOPRIVATE: github.com/ninech/apis
+  GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -21,6 +25,7 @@ jobs:
         with:
           go-version: '>=1.19'
           cache: true
+      - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - name: Run goreleaser
         uses: goreleaser/goreleaser-action@v3
         with:
