build: add missing build variables

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,7 +14,10 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w -X main.version={{.Version}}
+      - -s -w
+      - -X main.version={{.Version}}
+      - -X main.commit={{.Commit}}
+      - -X main.date={{.Date}}
 checksum:
   name_template: 'checksums.txt'
 snapshot:
