refactor: fix typos

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,17 +14,23 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: stable
       - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.63.4
+          version: latest
           args: --timeout=10m
       - uses: dominikh/staticcheck-action@v1
         with:
           version: latest
           install-go: false
+  spell-check:
+    name: spell-check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: crate-ci/typos@v1.33.1
   test:
     name: test
     container: ninech/controller-test-image:latest
@@ -33,7 +39,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: stable
       - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
       - name: Get dependencies
         run: go get -v -t -d ./...
