--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           version: latest
           install-go: false
+      - run: go run golang.org/x/tools/gopls/internal/analysis/modernize/cmd/modernize@latest -fix -diff -test ./...
   spell-check:
     name: spell-check
     runs-on: ubuntu-latest
