--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           go-version-file: go.mod
       - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
+      - run: go mod tidy -diff
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
