--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,9 +40,6 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
-          go-version-file: go.mod
+          go-version: stable
       - run: git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
-      - name: Get dependencies
-        run: go get -v -t -d ./...
-      - name: Test
-        run: go test -v ./...
+      - run: make test
